# Pynt

./: .gitignore  DOCUMENTO_REQUISITI.md  Dockerfile  Fixprovider(sembra funzionare).txt  Makefile  README.md  RELEASE.md  RUN_RAG_TESTS.md  STRATEGY_TEST_V2.md  c4.py  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt  test_vul.py
.github/: copilot-instructions.md
Security_test/: c2.py
Security_test/.test_results/: metrics_20260303_200134.json  report_20260303_200134.txt
extension/: CHANGELOG.md  README.md  package-lock.json  package.json
extension/src/: FixProvider.ts  analyzer.ts  codeActions.ts  decorators.ts  deepScanProvider.ts  extension.ts  types.ts
extension/views/: deep_scan_report.html
server/: .gitignore  main.py  test.py
server/agents/: base_agent.py  bestpractices_agent.py  fault_agent.py  security_agent.py
server/analyzers/: semgrep_analyzer.py
server/analyzers/rules/: bestpractice_rules  fault_rules.yaml  python_rules.yaml  security_rules.yaml
server/config/: settings.py
server/models/: schemas.py
server/service/: rag_service.py
test_rag/: security_utils.py  vulnerabile.py
test_rag2/: app.py  auth.py  config.py  database.py  test_fix_funct.py  utils.py
tests/: README_TEST_STRATEGY.md  check_endpoints.txt  conftest.py  metrics.py  pytest.ini  test_detector_integration.py  test_diagnostic_validation.py  test_endpoints.ps1  test_langchain_smoke.py  test_rag_evaluation.py  test_rag_evaluation_online.py  test_rag_retrieval_offline.py  test_security_analysis.py
tests/BestPracties_test/: aa.py  bb.py
tests/Security_test/: baseline_detection.json  c1.py  ground_truth.json
tests/fixtures/: expected_findings.json  vulnerable_code_samples.py
tmp_rag_smoke/: sample.py
